[package]
name = "voting_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.36"
zokrates_core = "0.7.3"
zokrates_field = "0.5.1"
zokrates_common = "0.4.1"
zokrates_proof_systems = "0.3.0"
rand = "0.8.5"
sha2 = "0.10.6"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
